# YTP-Hackathon

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf  package-lock.json
.github/workflows/: docker.yml  fastapi.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  login.py  main.py  mission.py  navigation.py  oauth.py  plan.py
backend/app/data/: events.json  hotels.json
backend/app/models/: __init__.py  missions.py  mixin.py  plans.py  users.py
backend/app/utils/: event_query.py  hotel.py  judge.py  metro_lookup.py  metro_system.py  navigation_utils.py  oauth.py  smtp.py  weather_query,py  weather_query.py
backend/fastapi/: Dockerfile  generate_env_example.py  main.py
backend/fastapi/alembic/: env.py
backend/fastapi/app/: .env.example  __init__.py  config.py
backend/fastapi/app/api/: __init__.py  main.py
backend/fastapi/app/models/: __init__.py  users.py
backend/fastapi/app/utils/: smtp.py
backend/migration/: env.py
backend/migration/versions/: e921b73a49fc_initial_migration.py  e9e3f3fa8325_add_travel_plans_table.py  efeca7af2c6e_add_missions_table.py
backend/nginx/: Dockerfile  nginx.conf  site.conf
backend/tests/: conftest.py  test_root.py
beacon2/: App.tsx  app.json  note.md  package-lock.json  package.json
beacon2/components/: WebViewBridge.tsx
beacon2/services/: BackendService.ts  BeaconScanner.ts
beacon2/types/: t.ts
beacon2/utils/: MetroMappingUtils.ts  TaipeiMetroUtils.ts
frontend/: Dockerfile  note.md  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css  main.tsx
frontend/src/api/: directionsApi.ts  hotelApi.ts  metroApi.ts  mockBackend.ts  mockNavigation.ts  planApi.ts  test.ts  (+1 more)
nginx/: Dockerfile  http.conf  nginx.conf  ssl.conf
(+26 files in other folders)
